{
    "name": "InputManager",
    "maps": [
        {
            "name": "Movement",
            "id": "fd273c9e-c64a-4b46-a3ec-bfa1b40b40da",
            "actions": [
                {
                    "name": "HorizontalWalk",
                    "type": "Button",
                    "id": "9247e8c9-9631-4bd2-bb86-24f1635b2e12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VerticalWalk",
                    "type": "Button",
                    "id": "27bfd84d-78a6-401d-ad68-1da4badb9a2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "433b5a52-61df-4739-a58a-6fe00dd418b7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalWalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "455fc383-f529-494b-99bf-98b3a8b32cae",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0b6f1224-ec47-4ab6-a95f-f5e0408bbf5d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WD",
                    "id": "02c70628-4f24-4975-af23-fc25493a802d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalWalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "80265087-2996-44ec-92ac-f811803894cd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "83e26c43-0015-41f1-9bc4-263b6280ab0d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}